<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            app:cardPreventCornerOverlap="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productCategoryMainTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/checkout_details"
                    android:textSize="@dimen/_20ssp" />

                <ImageView
                    android:id="@+id/backToShoppingCartScreen"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/back"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/checkout_name_label"
                android:textColor="#375a63"
                android:textSize="@dimen/_20sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/checkoutNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/checkout_field_background"
                    android:hint="@string/checkout_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:src="@drawable/checkout_name"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/checkout_mobile_label"
                android:textColor="#375a63"
                android:textSize="@dimen/_20sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/checkoutMobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/checkout_field_background"
                    android:hint="@string/checkout_mobile"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:src="@drawable/checkout_mobile"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/checkout_notes_label"
                android:textColor="#375a63"
                android:textSize="@dimen/_20sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/checkoutNotesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/checkout_field_background"
                    android:hint="@string/checkout_notes"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:src="@drawable/checkout_notes"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="@string/checkout_address_label"
                android:textColor="#375a63"
                android:textSize="@dimen/_20sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/checkoutAddressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/checkout_field_background"
                    android:gravity="top"
                    android:hint="@string/checkout_address"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/checkout_address"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </LinearLayout>


        <Button
            android:id="@+id/checkoutSendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/checkout_button_background"
            android:text="@string/checkout_send"
            android:textColor="#ffffff"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>


</ScrollView>